--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -5,6 +5,7 @@
   padding: 5rem 0;
   background-size: cover;
   background-position: 50%;
+  position: relative;
 }
 
 .barra {
@@ -24,6 +25,8 @@
   margin-top: 5rem;
   display: flex;
   gap: 2rem;
+  position: relative;
+  z-index: 1;
 }
 @media (min-width: 768px) {
   .navegacion {
@@ -95,4 +98,36 @@
 .enlace:hover {
   background-color: var(--primary);
   color: var(--blanco);
+}
+
+.guitarra {
+  display: none;
+}
+
+@media (min-width: 992px) {
+  .guitarra {
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: -8px;
+    animation-name: mostrarImagen;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-delay: 0;
+    animation-timing-function: ease-in-out;
+  }
+}
+
+@keyframes mostrarImagen {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
