--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,16 @@
 :root {
   --primary: #e99401;
   --negro: #262626;
-  --blanco: #FFF;
-  --fuente-principal: 'Outfit', sans-serif;
+  --blanco: #fff;
+  --fuente-principal: "Outfit", sans-serif;
 }
 html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 body {
